postgresql-common (64) unstable; urgency=low

  * Fix pg_ctlcluster regression from 63: 'database system is starting up'
    fatal error message caused immediate abortion of startup checks. Make the
    check easier and more robust, adapt test cases accordingly.
  * t/020_create_sql_remove.t: Add check that PL/Perl works. Check that
    -plperl-X.Y. is installed in t/001_packages.t.

 -- Martin Pitt <mpitt@debian.org>  Sun,  1 Oct 2006 19:08:44 +0200

postgresql-common (63) unstable; urgency=low

  * t/090_multicluster.t, t/100_upgrade_scripts.t: Replace hardcoded '8.1'
    versions in test data with appropriate $MAJORS values.
  * pg_createcluster: Add configure_8_2().
  * pg_ctlcluster, check_running_postmaster(): Check for both 'postmaster' and
    'postgres' processes to also work for 8.2.
  * t/TestLib.pm, check_clean(): Also check for running 'postgres' processes
    (since that's how the server is called in 8.2+). Update number of tests
    everywhere.
  * t/TestLib.pm, check_clean(): Fix regexp for netstat port grepping so that
    ports like '54321' do not match.
  * t/TestLib.pm, pidof(): Make pidof() strict enough to not catch the stats
    collector and writer subprocesses.
  * t/*.t: Various small adaptions to work with 8.2, too.
  * t/060_obsolete_confparams.t: Add full configuration for 8.1, to test
    8.1->8.2 upgrade.
  * pg_upgradecluster: When upgrading to 8.2, transition changed configuration
    options:
    - preload_libraries -> shared_preload_libraries
    - australian_timezones -> timezone_abbreviations
  * pg_ctlcluster: Instead of parsing pg_hba.conf, just try to connect with
    setting PGPASSWORD to a bogus value, and check for authentication errors.
    This is more robust and more elegant, and also covers nonstandard
    authentication schemes correctly. Closes: #388419
  * debian/supported-versions: Recklessly consider 8.2 as supported to avoid
    whining if 8.2 package gets backported.
